--- a/b12a.css
+++ b/b12a.css
@@ -127,3 +127,42 @@ body {
       height: auto;
       border-radius: 20px;
     }
+     /* Productive Users */
+  .stats-section {
+  background-color: #e8eafe; 
+  border-radius: 20px;       
+  padding: 40px 20px;
+  max-width: 1140px;
+  margin: 100px auto; 
+}
+
+.stats-section h2 {
+  font-size: 38px;
+  margin-bottom: 90px;
+  color: #111;
+  text-align: center;
+  font-family: raleway, sans-serif;
+  font-weight: bold;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap; 
+}
+
+.stat-item h3 {
+  font-size: 80px;
+  color: #4CAF50; 
+  margin: 0;
+  font-family: inter, sans-serif;
+  font-weight: bold;
+}
+
+.stat-item p {
+  margin: 8px 0 0;
+  color: #666;
+  font-family: inter, sans-serif;
+  font-size: 20px;
+}
+
