--- a/b12a.css
+++ b/b12a.css
@@ -165,4 +165,87 @@ body {
   font-family: inter, sans-serif;
   font-size: 20px;
 }
+ /* Users' Feedback */
+    .feedback-section {
+      padding: 4rem 8%;
+      text-align: center;
+    }
+
+    .feedback-section h2 {
+      font-size: 42px;
+      margin-bottom: 3rem;
+      color: #333;
+      font-family: raleway, sans-serif;
+      font-weight: bold
+    }
+
+    .feedback-cards {
+      display: flex;
+      gap: 2rem;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .feedback-card {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      max-width: 300px;
+      text-align: left;
+    }
+
+    .stars {
+      color: #facc15; 
+      margin-bottom: 0.5rem;
+    }
+
+    .feedback-card h3 {
+      margin: 0.5rem 0;
+      font-size: 1.2rem;
+      font-family: heading;
+      font-weight: bold;
+      
+    }
+
+    .feedback-card p {
+      font-size: 0.95rem;
+      color: #555;
+      margin-bottom: 1rem;
+      font-family: sans-serif ;
+    }
+    
+    .feedback-card:hover {
+      transform: translateY(-5px);
+      box-shadow:
+      0 0 10px #0ff,   
+      0 0 20px #0ff,
+      0 0 30px #0ff;
+    }
+
+    .reviewer {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      font-family: sans-serif ;
+      font-weight: bold;
+    }
+
+    .reviewer img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .reviewer-info {
+      font-size: 0.8rem;
+      color: #555;
+    }
+
+    .reviewer-info strong {
+      display: block;
+      font-weight: bold;
+      color: #333;
+    }
 
