adding footer with css

--- a/b12a.css
+++ b/b12a.css
@@ -330,4 +330,30 @@ body {
       .contact-right {
         width: 100%;
       }}
+      /* Footer */
+    footer {
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 2rem;
+      
+    }
+    footer h3 {
+      font-size: 100px;
+      color: white;
+      font-family: sans-serif;
+    }
+    footer p{
+      font-size: 20px;
+      padding-bottom: 40px;
+    }
 
+    footer nav a {
+      color: white;
+      margin: 0 0.5rem;
+      transition: color 0.3s ease;
+    }
+
+    footer nav a:hover {
+      text-decoration: underline;
+    }
